// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`00 Code span basic, positive 1`] = `
Object {
  "buffer": "/**[n] * line [c]1[c][n] * line [c] 2[c] sdf[n] */",
  "lines": Array [
    "line [c]1[c]",
    "line [c] 2[c] sdf",
  ],
  "rootNode": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "PlainText",
        "nodePrefix": "line ",
      },
      Object {
        "kind": "CodeSpan",
        "nodePrefix": "[c]1[c]",
      },
      Object {
        "kind": "SoftBreak",
        "nodePrefix": "[n]",
      },
      Object {
        "kind": "PlainText",
        "nodePrefix": "line ",
      },
      Object {
        "kind": "CodeSpan",
        "nodePrefix": "[c] 2[c]",
      },
      Object {
        "kind": "PlainText",
        "nodePrefix": " sdf",
      },
      Object {
        "kind": "SoftBreak",
        "nodePrefix": "[n]",
      },
    ],
  },
}
`;

exports[`01 Code span basic, negative 1`] = `
Object {
  "buffer": "/**[n] * [c]multi[n] * line[c][n] */",
  "lines": Array [
    "[c]multi",
    "line[c]",
  ],
  "rootNode": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "errorLocation": "[c]",
        "errorMessage": "The code span is missing its closing backtick",
        "kind": "ErrorText",
        "nodePrefix": "[c]",
      },
      Object {
        "kind": "PlainText",
        "nodePrefix": "multi",
      },
      Object {
        "kind": "SoftBreak",
        "nodePrefix": "[n]",
      },
      Object {
        "kind": "PlainText",
        "nodePrefix": "line",
      },
      Object {
        "errorLocation": "[c]",
        "errorLocationPrecedingToken": "line",
        "errorMessage": "The opening backtick for a code span must be preceded by whitespace",
        "kind": "ErrorText",
        "nodePrefix": "[c]",
      },
      Object {
        "kind": "SoftBreak",
        "nodePrefix": "[n]",
      },
    ],
  },
}
`;

exports[`01 Code span basic, negative 2`] = `
Object {
  "buffer": "/**[n] * one[c]two[n] * [c]three[c]four[n] */",
  "lines": Array [
    "one[c]two",
    "[c]three[c]four",
  ],
  "rootNode": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "PlainText",
        "nodePrefix": "one",
      },
      Object {
        "errorLocation": "[c]",
        "errorLocationPrecedingToken": "one",
        "errorMessage": "The opening backtick for a code span must be preceded by whitespace",
        "kind": "ErrorText",
        "nodePrefix": "[c]",
      },
      Object {
        "kind": "PlainText",
        "nodePrefix": "two",
      },
      Object {
        "kind": "SoftBreak",
        "nodePrefix": "[n]",
      },
      Object {
        "errorLocation": "[c]",
        "errorLocationPrecedingToken": "three",
        "errorMessage": "Error parsing code span: The closing backtick for a code span must be followed by whitespace",
        "kind": "ErrorText",
        "nodePrefix": "[c]",
      },
      Object {
        "kind": "PlainText",
        "nodePrefix": "three",
      },
      Object {
        "errorLocation": "[c]",
        "errorLocationPrecedingToken": "three",
        "errorMessage": "The opening backtick for a code span must be preceded by whitespace",
        "kind": "ErrorText",
        "nodePrefix": "[c]",
      },
      Object {
        "kind": "PlainText",
        "nodePrefix": "four",
      },
      Object {
        "kind": "SoftBreak",
        "nodePrefix": "[n]",
      },
    ],
  },
}
`;
